@@ -3,6 +3,8 @@
 	* Continue work on cerebro-stat tool.
 
 	* Fix pthread stack size bug.
+
+	* Fix metric server double hostname return bug.
 	
 2005-07-05  Albert Chu  <chu11@llnl.gov>
 
